[metadata]
name = cs1
version = 0.0.1
author = Yinsheng Zhang (Ph.D.)
author_email = oo@zju.edu.cn
description = Compressed Sensing library for 1D Spectroscopic Profiling Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhangys11/spcs
project_urls =
    Bug Tracker = https://github.com/zhangys11/spcs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
# include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scikit-learn
    matplotlib
    numpy
    PyWavelets
    statsmodels

[options.packages.find]
where = src

# [options.package_data]
# * = *.txt, *.csv