[metadata]
name = cs1
version = 0.1.7
author = Yinsheng Zhang (Ph.D.)
author_email = oo@zju.edu.cn
description = Compressed Sensing library for 1D Spectroscopic Profiling Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhangys11/cs1
project_urls =
    Bug Tracker = https://github.com/zhangys11/cs1/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
# include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scikit-learn
    matplotlib
    numpy
    PyWavelets
    statsmodels
    pydub
    opencv-python

[options.packages.find]
where = src

[options.package_data]
* = *.html, *.js, *.css, *.woff, *.woff2, *.ttf, *.svg, *.eot, *.otf, *.png, *.jpeg, *.jpg

##### how to release #####
# pip install build twine
# python -m build
# twine upload dist/* 
#   Enter your username: zhangys